fix tab-slider gap, fix padding+btn gap

--- a/src/css/yahts.css
+++ b/src/css/yahts.css
@@ -1,4 +1,7 @@
 /*============================|top side|===========================*/
+#yahts {
+  padding-bottom: 100px;
+}
 .yachts-box {
   display: block;
 }
@@ -90,12 +93,9 @@
   position: relative;
   margin: 0 auto;
 }
-.yacht-gallery .swiper {
-  width: 100%;
-}
 .gallery-btn {
   position: absolute;
-  bottom: -50px;
+  bottom: -65px;
   left: 50%;
   transform: translate(-50%, 0);
   display: flex;
@@ -132,7 +132,7 @@
   padding: 16px 16px 32px;
   border-radius: 8%;
   background-color: var(--blue);
-  width: 334px;
+  width: 335px;
 }
 .yacht-card:hover > .picture-box img,
 .yacht-card:focus > .picture-box img {
@@ -189,16 +189,19 @@
   }
 }
 @media only screen and (min-width: 768px) {
+  #yahts {
+    padding-bottom: 118px;
+  }
   .yacht-title-box {
     width: 640px;
     margin-bottom: 100px;
   }
   .gallery-btn {
-    bottom: -54px;
+    bottom: -73px;
     width: 116px;
   }
   .yacht-card {
-    width: 350px;
+    width: 340px;
   }
   .yacht-title-h2 {
     font-size: 70px;
@@ -208,6 +211,9 @@
   }
 }
 @media only screen and (min-width: 1280px) {
+  #yahts {
+    padding-bottom: 82px;
+  }
   .yachts-box {
     position: relative;
   }
